# Harness

./: .gitignore  README.md
.ai/: deep_interview.py  harness.config.json  harness.py  harness_fast.py  harness_standard.py  orchestrate.py  pc_review.py  project_contract.md  project_planning.py  pyproject.toml  requirements.txt
.ai/docs/: 01-project-init_명세서.docx  02-project-search-tab_명세서.docx  03-project-chart-event_명세서.docx  04-project-chart-compare-with-benchmark_명세서.docx
.ai/harness_core/: __init__.py  console.py  context.py  cross_validation.py  deep_thinking.py  docx_validation.py  errors.py  frontmatter.py  history.py  json_io.py  pipeline.py  policy.py  process.py  providers.py  questions.py  requirements.py  schemas_validation.py  stage_runtime.py  status.py  text.py  verification.py  workflow.py
.ai/history/: index.json  pc_candidates.json  summary.md
.ai/selftests/: integration_fake_provider.py  integration_support.py  stdout.txt  support.py  test_cleanup_guard.py  test_console.py  test_cross_validation.py  test_cross_validation_integration.py  test_deep_interview.py  test_deep_thinking.py  test_docx_helper.py  test_docx_validation.py  test_frontmatter.py  test_history.py  test_integration.py  test_integration_failures.py  test_integration_independence.py  test_json_io.py  test_orchestrate.py  test_pc_review.py  test_pipeline_config.py  test_policy.py  test_preset_conformance.py  test_process.py  test_project_planning.py  test_prompt_contract.py  test_provider_execution.py  test_providers.py  test_pyright.py  test_questions.py  test_requirements.py  (+8 more)
(+208 files in other folders)
